--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "node app.js",
-  "lint": "eslint .",
-  "test": "jest --coverage",
-  "build": "babel . --out-dir dist --copy-files --ignore node_modules,dist,coverage"
-},
+    "start": "node app.js",
+    "lint": "eslint .",
+    "test": "jest --coverage",
+    "build": "babel . --out-dir dist --copy-files --ignore node_modules,dist,coverage"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,7 +19,11 @@
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
     "eslint": "^9.39.1",
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "semantic-release": "^22.0.12"
   }
 }
