--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-node-app",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "lint": "eslint .",
@@ -19,10 +20,13 @@
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
+    "@eslint/js": "^9.39.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "eslint": "^9.39.1",
+    "eslint-plugin-jest": "^28.14.0",
+    "globals": "^16.5.0",
     "jest": "^30.2.0",
     "semantic-release": "^22.0.12"
   }
