--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jest": "^28.14.0",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
-    "semantic-release": "^22.0.12"
+    "semantic-release": "^22.0.12",
+    "supertest": "^7.1.4"
   }
 }
