--- a/.github/workflows/ci-with-build.yml
+++ b/.github/workflows/ci-with-build.yml
@@ -32,6 +32,13 @@ jobs:
       - name: Build application
         run: npm run build
 
+      - name: Upload to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage/lcov.info
+          fail_ci_if_error: true
+
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
